// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal snapshots > css mode snapshot 1`] = `
"import React, { useEffect, useId } from 'react';
import FocusTrap from 'focus-trap-react';
import styles from './Modal.module.css';

export type ModalVariant = 'default' | 'confirm';
export type ModalSize    = 'sm' | 'md' | 'lg';

export interface ModalProps {
  isOpen:    boolean;
  onClose:   () => void;
  title:     string;
  children:  React.ReactNode;
  variant?:  ModalVariant;
  size?:     ModalSize;
  footer?:   React.ReactNode;
}

export const Modal: React.FC<ModalProps> = ({
  isOpen,
  onClose,
  title,
  children,
  variant = 'default',
  size = 'md',
  footer,
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <FocusTrap>
      <div className={styles.overlay} onClick={onClose}>
        <div
          className={[styles.modal, styles[\`modal--\${size}\`]].join(' ')}
          role="dialog"
          aria-modal="true"
          aria-labelledby={titleId}
          onClick={(e) => e.stopPropagation()}
        >
          <header className={styles.header}>
            <h2 id={titleId} className={styles.title}>{title}</h2>
            <button
              className={styles.closeButton}
              onClick={onClose}
              aria-label="Close modal"
            >
              &times;
            </button>
          </header>
          <div className={styles.body}>
            {children}
          </div>
          {footer && (
            <footer className={styles.footer}>
              {footer}
            </footer>
          )}
        </div>
      </div>
    </FocusTrap>
  );
};

Modal.displayName = 'Modal';
"
`;

exports[`Modal snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

:root {
  --color-primary: #6C63FF;
  --color-secondary: #F3F2FF;
  --color-surface: #FFFFFF;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-danger: #E24B4A;
  --color-success: #1D9E75;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}


.overlay {
  position:        fixed;
  top:             0;
  left:            0;
  right:           0;
  bottom:          0;
  background-color: rgba(0, 0, 0, 0.5);
  display:         flex;
  align-items:     center;
  justify-content: center;
  z-index:         1000;
  padding:         calc(var(--spacing-unit) * 4);
}

.modal {
  background:      var(--color-surface);
  border-radius:   var(--radius-lg);
  box-shadow:      0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
  max-height:      calc(100vh - (var(--spacing-unit) * 10));
  display:         flex;
  flex-direction:  column;
  width:           100%;
  animation:       modalIn 0.3s ease-out;
}

@keyframes modalIn {
  from { opacity: 0; transform: scale(0.95) translateY(10px); }
  to   { opacity: 1; transform: scale(1) translateY(0); }
}

.header {
  padding:        calc(var(--spacing-unit) * 4);
  border-bottom:  1px solid var(--color-border);
  display:        flex;
  align-items:    center;
  justify-content: space-between;
}

.title {
  margin:      0;
  font-size:   1.25rem;
  font-weight: 600;
  color:       var(--color-text);
  font-family: var(--font-family);
}

.closeButton {
  background:    transparent;
  border:        none;
  font-size:     1.5rem;
  line-height:   1;
  color:         var(--color-text-muted);
  cursor:        pointer;
  padding:       calc(var(--spacing-unit) * 2);
  border-radius: var(--radius-sm);
  transition:    background 0.15s ease;
}

.closeButton:hover {
  background: var(--color-background);
  color:      var(--color-text);
}

.body {
  padding:     calc(var(--spacing-unit) * 6);
  overflow-y:  auto;
  font-family: var(--font-family);
  color:       var(--color-text);
  line-height: 1.5;
}

.footer {
  padding:       calc(var(--spacing-unit) * 4);
  border-top:    1px solid var(--color-border);
  display:       flex;
  justify-content: flex-end;
  gap:           calc(var(--spacing-unit) * 3);
}

/* Sizes */
.modal--sm { max-width: 400px; }
.modal--md { max-width: 600px; }
.modal--lg { max-width: 800px; }
"
`;

exports[`Modal snapshots > css mode snapshot 3`] = `
"import React, { useState } from 'react';
import type { Meta, StoryObj } from '@storybook/react';
import { Modal } from './Modal';
import { Button } from './Button';

const meta: Meta<typeof Modal> = {
  title: 'Crucible/Modal',
  component: Modal,
  parameters: { layout: 'centered' },
  argTypes: {
    size: { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Modal>;

export const Default: Story = {
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <>
        <Button onClick={() => setIsOpen(true)}>Open Modal</Button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)} />
      </>
    );
  },
  args: {
    title:    'Example Modal',
    children: 'This is the content of the modal. You can place anything here.',
  },
};

export const WithFooter: Story = {
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <>
        <Button onClick={() => setIsOpen(true)}>Open Modal with Footer</Button>
        <Modal
          {...args}
          isOpen={isOpen}
          onClose={() => setIsOpen(false)}
          footer={
            <>
              <Button variant="secondary" onClick={() => setIsOpen(false)}>Cancel</Button>
              <Button onClick={() => setIsOpen(false)}>Confirm</Button>
            </>
          }
        />
      </>
    );
  },
  args: {
    title:    'Confirmation Required',
    children: 'Are you sure you want to proceed with this action?',
  },
};

export const Small: Story = {
  ...Default,
  args: {
    ...Default.args,
    size: 'sm',
  },
};

export const Large: Story = {
  ...Default,
  args: {
    ...Default.args,
    size: 'lg',
  },
};
"
`;

exports[`Modal snapshots > tailwind mode snapshot 1`] = `
"import React, { useEffect, useId } from 'react';
import FocusTrap from 'focus-trap-react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)]',
  confirm: 'bg-[var(--color-surface)] border-t-4 border-[var(--color-primary)]',
 };

const sizeClasses: Record<string, string> = {
  sm: 'max-w-md',
  md: 'max-w-lg',
  lg: 'max-w-2xl',
};

export type ModalVariant = 'default' | 'confirm';
export type ModalSize    = 'sm' | 'md' | 'lg';

export interface ModalProps {
  isOpen:    boolean;
  onClose:   () => void;
  title:     string;
  children:  React.ReactNode;
  variant?:  ModalVariant;
  size?:     ModalSize;
  footer?:   React.ReactNode;
}

export const Modal: React.FC<ModalProps> = ({
  isOpen,
  onClose,
  title,
  children,
  variant = 'default',
  size = 'md',
  footer,
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <FocusTrap>
      <div 
        className="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/50 backdrop-blur-sm"
        onClick={onClose}
      >
        <div
          className={[
            'w-full bg-[var(--color-surface)] rounded-[var(--radius-lg)] shadow-2xl overflow-hidden',
            variantClasses[variant],
            sizeClasses[size],
          ].join(' ')}
          role="dialog"
          aria-modal="true"
          aria-labelledby={titleId}
          onClick={(e) => e.stopPropagation()}
        >
          <header className="flex items-center justify-between p-6 border-b border-[var(--color-border)]">
            <h2 id={titleId} className="text-xl font-bold text-[var(--color-text)]">{title}</h2>
            <button
              className="text-[var(--color-text-muted)] hover:text-[var(--color-text)] transition-colors text-2xl"
              onClick={onClose}
              aria-label="Close modal"
            >
              &times;
            </button>
          </header>
          <div className="p-6 text-[var(--color-text-muted)]">
            {children}
          </div>
          {footer && (
            <footer className="p-6 border-t border-[var(--color-border)] bg-[var(--color-background)]/50">
              {footer}
            </footer>
          )}
        </div>
      </div>
    </FocusTrap>
  );
};

Modal.displayName = 'Modal';
"
`;

exports[`Modal snapshots > tailwind mode snapshot 2`] = `
"import React, { useState } from 'react';
import type { Meta, StoryObj } from '@storybook/react';
import { Modal } from './Modal';
import { Button } from './Button';

const meta: Meta<typeof Modal> = {
  title: 'Crucible/Modal',
  component: Modal,
  parameters: { layout: 'centered' },
  argTypes: {
    size: { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Modal>;

export const Default: Story = {
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <>
        <Button onClick={() => setIsOpen(true)}>Open Modal</Button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)} />
      </>
    );
  },
  args: {
    title:    'Example Modal',
    children: 'This is the content of the modal. You can place anything here.',
  },
};

export const WithFooter: Story = {
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <>
        <Button onClick={() => setIsOpen(true)}>Open Modal with Footer</Button>
        <Modal
          {...args}
          isOpen={isOpen}
          onClose={() => setIsOpen(false)}
          footer={
            <>
              <Button variant="secondary" onClick={() => setIsOpen(false)}>Cancel</Button>
              <Button onClick={() => setIsOpen(false)}>Confirm</Button>
            </>
          }
        />
      </>
    );
  },
  args: {
    title:    'Confirmation Required',
    children: 'Are you sure you want to proceed with this action?',
  },
};

export const Small: Story = {
  ...Default,
  args: {
    ...Default.args,
    size: 'sm',
  },
};

export const Large: Story = {
  ...Default,
  args: {
    ...Default.args,
    size: 'lg',
  },
};
"
`;
